# ai-multi-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-aws.yml  deploy-azure.yml
docs/ai-engineering/: cost-analysis.md  crewai-deep-dive.md  multi-agent-orchestration.md  testing.md  websocket-deep-dive.md
docs/architecture-and-design/: architecture.md
docs/hands-on-labs/: hands-on-labs-config-tuning.md  hands-on-labs-phase-1.md  hands-on-labs-phase-2.md
docs/reference/: pydantic-models.md
docs/setup-and-tooling/: debugging-guide.md  getting-started.md
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
infra/aws/: budget.tf  cloudwatch.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  networking.tf  outputs.tf  terraform.tf  variables.tf
infra/aws/budget_killer_lambda/: handler.py
infra/azure/: budget.tf  container_app.tf  outputs.tf  redis.tf  resource_group.tf  terraform.tf  variables.tf
scripts/: run_all_labs.py  run_cloud_labs.sh
src/: config.py  main.py  models.py
src/agents/: crew.py  definitions.py
src/llm/: provider.py
src/routes/: health.py  tasks.py  ws.py
src/tasks/: store.py
src/websocket/: manager.py
tests/: conftest.py  test_api.py  test_integration.py  test_task_store.py  test_websocket.py
