[tool.poetry]
name = "ai-multi-agent"
version = "0.1.0"
description = "Multi-agent collaboration platform with CrewAI, WebSockets, and Next.js frontend"
authors = ["Ketan Sahu <ktnsh24@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "uvicorn src.main:create_app --factory --host 0.0.0.0 --port 8400 --reload"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
crewai = "^0.80.0"
crewai-tools = "^0.14.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-aws = "^0.2.0"
langchain-openai = "^0.2.0"
langchain-ollama = "^2.0.0"
websockets = "^13.0"
redis = "^5.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
